# vinhack-debugger-adapter

./: .gitignore  setup.cfg  setup.py
vinhack-debug/: __main__.py
vinhack-debug/debug_server/: __init__.py
vinhack_debug.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
