[metadata]
name = vinhack-debug
version = 0.0.1
author = Naman Agrawal 
author_email = naman2003now@gmail.com
description = A visual debugger for Python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = vinhack-debug
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = vinhack-debug
